# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'https://credit.catcof.site'
+    url: 'http://cofcredit.cofina.localhost'
 paths:
   /api/auth/login:
     post:
@@ -654,32 +654,6 @@ paths:
                   type: string
                   description: 'Le commentaire de refus de déblocage.'
                   example: 'Manque ...'
-    parameters:
-      -
-        in: path
-        name: id
-        description: "L'ID du CAT."
-        example: 1
-        required: true
-        schema:
-          type: integer
-  '/api/download/{id}':
-    get:
-      summary: "Télécharge la version word d'un CAT"
-      operationId: tlchargeLaVersionWordDunCAT
-      description: ''
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example: {  }
-                properties: {  }
-      tags:
-        - CAT
     parameters:
       -
         in: path
@@ -1858,6 +1832,32 @@ paths:
       responses:
         204:
           description: ''
+      tags:
+        - Contrat
+    parameters:
+      -
+        in: path
+        name: id
+        description: "L'ID du contrat."
+        example: 1
+        required: true
+        schema:
+          type: integer
+  '/api/download/{id}':
+    get:
+      summary: "Télécharge le billet à ordre d'un contrat"
+      operationId: tlchargeLeBilletOrdreDunContrat
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
       tags:
         - Contrat
     parameters:
